--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 h1{ 
     text-align: center;
     font-family: "Times New Roman";
-    font-size: 64px;
+    font-size: 50;
     margin: 0;
     padding-bottom: 0%;
 }
