--- a/style.css
+++ b/style.css
@@ -39,3 +39,13 @@ img{
     margin-bottom: 20px;
 
 }
+
+body.light-theme {
+    background-color: white;
+    color: black;
+}
+
+body.dark-theme {
+    background-color: black;
+    color: white;
+}
