change to javascript

--- a/style.css
+++ b/style.css
@@ -49,3 +49,5 @@ body.dark-theme {
     background-color: black;
     color: white;
 }
+
+/* this is a comment to allow me to push my changes to github
