--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -1,6 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
+:root {
+--primary-color: #1B98E0;
+--secondary-color: #59c3c3;
+--text-dark: #333;
+--text-light: #ebebeb;
+--primary-font: Arial, Helvetica,sans-serif;
+--secondary-font: "Amatic SC";
+}
+
+
+html,body{
+    min-height: 100vh;
+}
+
+
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+    display:flex;
+    flex-direction: column;
 }
 
 header {
@@ -30,13 +49,127 @@ input[type=text] {
 
 button {
     padding: 10px;
-    background-color: #4CAF50;
     color: white;
     border: none;
     border-radius: 0 4px 4px 0;
     cursor: pointer;
+
 }
+
+button img{
+    width:25px;
+}
+
 
 button:hover {
     background-color: #45a049;
+}
+
+
+footer{
+    display:flex;
+
+}
+
+.social img{
+    width: 50px;
+}
+
+main{
+    flex-grow:1;
+    padding: 20px;
+}
+
+
+.title{
+    display:flex;
+    justify-content: center;
+
+}
+
+.title img{
+    height: 60px;
+}
+
+
+.title h1{
+        font-family: "Amatic SC", sans-serif;
+        font-weight: 600;
+        font-style: normal;
+}
+
+footer a{
+    color:var(--primary-color);
+}
+
+.recipe{
+    border:solid 1px black;
+    border-radius: 6px;
+    padding: 20px;
+    display:flex;
+}
+
+.tags{
+    margin-top: 10px;
+    display:flex;
+    flex-wrap: wrap;
+    gap:5px;
+}
+
+.tags span{
+    border: solid 1px black;
+    padding:5px;
+}
+
+.recipe h2{
+    color:var(--primary-color);
+    font-family: "Amatic SC", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 30px;
+    margin-bottom: 0%;
+}
+
+.recipe img{
+    width:400px;
+}
+
+.details{
+    padding-left: 10px;
+}
+
+button span{
+    display:none;
+}
+
+
+@media (max-width: 700px){
+    footer{
+        flex-direction: column-reverse;
+        text-align: center;
+        font-size: 12px;
+        padding-bottom: 20px;
+        margin-top: 15px;
+    }
+
+    .recipe img{
+        width:100%;
+    }
+
+    .recipe{
+        flex-direction: column;
+    }
+
+    .recipe p{
+        display:none;
+    }
+
+}
+
+@media (min-width: 700px){
+    footer{
+        align-items: center;
+        justify-content: space-between;
+        padding:20px;
+    }
 }
